# raytracing

./: .gitignore
hw1/: CMakeLists.txt  run.sh
hw1/source/: color.cpp  color.h  figure.cpp  figure.h  point.cpp  point.h  scene.cpp  scene.h
hw2/: CMakeLists.txt  run.sh  sample.txt
hw2/source/: figure.cpp  figure.h  light.cpp  light.h  point.cpp  point.h  scene.cpp  scene.h
hw3/: CMakeLists.txt  build.sh  run.sh  sample.txt
hw3/source/: color.h  figure.h  scene.cpp  scene.h
hw4/: CMakeLists.txt  run.sh  sample.txt
hw4/source/: color.cpp  distribution.cpp  distribution.h  figure.cpp  figure.h  main.cpp  rotation.cpp  rotation.h  scene.cpp  scene.h
hw5/: CMakeLists.txt  run.sh  sample.txt
hw5/source/: bvh.cpp  bvh.h  color.cpp  color.h  distribution.cpp  distribution.h  figure.cpp  figure.h  main.cpp  point.cpp  point.h  rotation.h  scene.cpp  scene.h
hw6/: CMakeLists.txt  run.sh
hw6/source/: bvh.h  distribution.h  figure.h  gltf.h  main.cpp  material.h  point.cpp  point.h  rotation.h  scene.cpp  scene.h  transform.h
